Update video iframe to disable autoplay

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 video-container">
                     <iframe 
-                        src="https://vkvideo.ru/video_ext.php?oid=-225777667&id=456239020&hd=2&autoplay=1" 
-                        allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" 
+                        src="https://vkvideo.ru/video_ext.php?oid=-225777667&id=456239020&hd=2" 
+                        allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" 
                         frameborder="0" 
                         allowfullscreen
                         class="video-frame"
