--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0 video-container">
                     <iframe 
-                        src="https://vkvideo.ru/video_ext.php?oid=-225777667&id=456239020&hd=2" 
+                        src="https://vk.com/video_ext.php?oid=-225777667&id=456239020&hd=4" 
                         allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" 
                         frameborder="0" 
                         allowfullscreen
