Update styles and layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
     </style>
 </head>
-<body>
+<body class="overflow-x-hidden">
     <!-- Шапка -->
     <header class="bg-white shadow-sm">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
@@ -338,10 +338,10 @@
     </section>
 
     <!-- Призыв к действию -->
-    <section class="py-16 bg-red-600 text-white">
+    <section class="py-16 bg-red-600">
         <div class="container mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-6">Готовы к увлекательной игре с добрыми делами?</h2>
-            <p class="text-xl mb-8 max-w-2xl mx-auto">Присоединяйтесь к миллионам россиян, которые уже сделали Русское Лото частью своих семейных традиций.</p>
+            <h2 class="text-3xl font-bold mb-6 text-white">Готовы к увлекательной игре с добрыми делами?</h2>
+            <p class="text-xl mb-8 max-w-2xl mx-auto text-white">Присоединяйтесь к миллионам россиян, которые уже сделали Русское Лото частью своих семейных традиций.</p>
             <button class="bg-white hover:bg-gray-100 text-red-600 font-bold py-4 px-12 rounded-full transition transform hover:scale-105 shadow-lg text-lg">
                 Купить билет
             </button>
