Update video container styles

--- a/index.html
+++ b/index.html
@@ -401,8 +401,7 @@
 
     <script>
         // Простая анимация для шаров при загрузке страницы
-        document.addEventListener('DOMContentLoaded', function()
-        {
+        document.addEventListener('DOMContentLoaded', function() {
             const balls = document.querySelectorAll('.lottery-ball');
             balls.forEach((ball, index) => {
                 setTimeout(() => {
