--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-sm">
                     <div class="flex items-center mb-4">
                         <div class="w-16 h-16 bg-gray-200 rounded-full overflow-hidden mr-4">
-                            <img src="https://randomuser.me/api/portraits/women/43.jpg" alt="Победитель" class="w-full h-full object-cover">
+                            <img src="https://s.iimg.su/s/22/x9jtrV74vG2JEawEXFzTpkfmyygcCxYP92C5cuoY.jpg" alt="Победитель" class="w-full h-full object-cover">
                         </div>
                         <div>
                             <h3 class="font-bold text-gray-800">Елена С.</h3>
@@ -306,7 +306,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-sm">
                     <div class="flex items-center mb-4">
                         <div class="w-16 h-16 bg-gray-200 rounded-full overflow-hidden mr-4">
-                            <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Победитель" class="w-full h-full object-cover">
+                            <img src="https://s.iimg.su/s/22/DTgmsfTXMFOFcpb1xOtyNdD3Ota2ojJdnsu8JISd.jpg" alt="Победитель" class="w-full h-full object-cover">
                         </div>
                         <div>
                             <h3 class="font-bold text-gray-800">Александр П.</h3>
@@ -322,7 +322,7 @@
                 <div class="bg-white p-6 rounded-xl shadow-sm">
                     <div class="flex items-center mb-4">
                         <div class="w-16 h-16 bg-gray-200 rounded-full overflow-hidden mr-4">
-                            <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Победитель" class="w-full h-full object-cover">
+                            <img src="https://s.iimg.su/s/22/tiC1z2iUZFw1YvATyWKYGKFE2PEr1RxQqrN46Zpd.jpg" alt="Победитель" class="w-full h-full object-cover">
                         </div>
                         <div>
                             <h3 class="font-bold text-gray-800">Ольга М.</h3>
