--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <p class="text-gray-600 max-w-2xl mx-auto">Семейный ужин, общий смех и ожидание выигрыша за одним столом — в «Русском Лото» важна не только удача, но и радость быть вместе.</p>
             </div>
             <div class="flex flex-col md:flex-row items-center">
-                <div class="md:w-1/2 mb-10 md:mb-0 video-container">
+                <div class="md:w-1/2 mb-10 md:mb-0 video-container" style="aspect-ratio: 3/2; width: 100%;">
                     <iframe 
                         src="https://vkvideo.ru/video_ext.php?oid=-225777667&id=456239020&hd=2" 
                         width="853" 
@@ -425,5 +425,3 @@
             });
         });
     </script>
-</body>
-</html>
