Fix Vercel deployment issues

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                         allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" 
                         frameborder="0" 
                         allowfullscreen
-                        class="video-frame"
-                    ></iframe>
+                        class="video-frame">
+                    </iframe>
                 </div>
                 <div class="md:w-1/2 md:pl-12">
                     <div class="mb-8">
